--- a/css/layout.scss
+++ b/css/layout.scss
@@ -6205,9 +6205,9 @@ section.langame_software_wrapper {
                             .add_photo_wrapper {
                                 display: flex;
                                 flex-direction: row;
-                                justify-content: flex-start;
+                                justify-content: space-between;
                                 align-items: center;
-                                padding: 32px 0;
+                                padding: 32px 0 16px;
 
                                 .add_photo_title {
                                     font-style: normal;
@@ -6215,69 +6215,6 @@ section.langame_software_wrapper {
                                     font-size: 18px;
                                     line-height: 1;
                                     color: #000000;
-                                    margin-right: 32px;
-                                }
-
-                                .add_photo_list {
-                                    display: grid;
-                                    grid-template-columns: repeat(6, 46px);
-                                    grid-template-rows: repeat(2, 46px);
-                                    grid-gap: 8px;
-                                    margin-right: 42px;
-
-                                    .add_photo_item {
-                                        position: relative;
-                                        width: 46px;
-                                        height: 46px;
-                                        background: #d3d3d3;
-                                        border-radius: 14px;
-                                        display: flex;
-                                        flex-direction: row;
-                                        align-items: center;
-                                        justify-content: center;
-                                        font-style: normal;
-                                        font-weight: 500;
-                                        font-size: 18px;
-                                        line-height: 1;
-                                        color: #ffffff;
-
-                                        &:first-child {
-                                            grid-column: 1/3;
-                                            grid-row: 1/3;
-                                            width: 100px;
-                                            height: 100px;
-                                            background-image: url("../img/fill-white.svg");
-                                            background-repeat: no-repeat;
-                                            background-position: center;
-                                            background-size: 46px 46px;
-                                        }
-
-                                        img {
-                                            display: block;
-                                            width: 100%;
-                                            height: 100%;
-                                            object-fit: cover;
-                                            object-position: center center;
-                                            border-radius: 14px;
-                                        }
-
-                                        .remove_photo {
-                                            position: absolute;
-                                            top: -9px;
-                                            right: -5px;
-                                            display: block;
-                                            width: 21px;
-                                            height: 21px;
-                                            border-radius: 50%;
-                                            border: 0;
-                                            outline: 0;
-                                            background-image: url(../img/cancel.svg);
-                                            background-color: #fff;
-                                            background-repeat: no-repeat;
-                                            background-position: center;
-                                            background-size: 24px 24px;
-                                        }
-                                    }
                                 }
 
                                 .add_photo {
@@ -6338,6 +6275,94 @@ section.langame_software_wrapper {
                                                 background-image: url("../img/fill-white.svg");
                                             }
                                         }
+                                    }
+                                }
+                            }
+
+                            .add_photo_list {
+                                display: grid;
+                                grid-template-columns: repeat(2, auto);
+                                grid-template-rows: repeat(7, auto);
+                                grid-gap: 14px;
+                                margin-bottom: 32px;
+
+                                .add_photo_item {
+                                    position: relative;
+                                    width: 328px;
+                                    height: 222px;
+                                    background: #d3d3d3;
+                                    border-radius: 14px;
+                                    display: flex;
+                                    flex-direction: row;
+                                    align-items: center;
+                                    justify-content: center;
+                                    font-style: normal;
+                                    font-weight: 500;
+                                    font-size: 18px;
+                                    line-height: 1;
+                                    color: #ffffff;
+
+                                    &:first-child {
+                                        position: relative;
+                                        grid-column: 1/3;
+                                        grid-row: 1/3;
+                                        width: 670px;
+                                        height: 444px;
+                                        background-image: url("../img/fill-white.svg");
+                                        background-repeat: no-repeat;
+                                        background-position: center;
+                                        background-size: 46px 46px;
+
+                                        &:before{
+                                            content: 'Превью клуба';
+                                            position: absolute;
+                                            top: 16px;
+                                            left: 16px;
+                                            display: flex;
+                                            justify-content: center;
+                                            align-items: center;
+                                            width: 141px;
+                                            height: 35px;
+                                            font-style: normal;
+                                            font-weight: 500;
+                                            font-size: 18px;
+                                            line-height: 1;
+                                            color: #FFFFFF;
+                                            text-align: center;
+                                            background: rgba(85, 85, 85, 0.5);
+                                            backdrop-filter: blur(8px);
+                                            border-radius: 8px;
+                                        }
+                                    }
+
+                                    img {
+                                        display: block;
+                                        width: 100%;
+                                        height: 100%;
+                                        object-fit: cover;
+                                        object-position: center center;
+                                        border-radius: 14px;
+                                    }
+
+                                    .remove_photo {
+                                        position: absolute;
+                                        top: -9px;
+                                        right: -5px;
+                                        display: block;
+                                        width: 21px;
+                                        height: 21px;
+                                        border-radius: 50%;
+                                        border: 0;
+                                        outline: 0;
+                                        background-image: url(../img/cancel.svg);
+                                        background-color: #fff;
+                                        background-repeat: no-repeat;
+                                        background-position: center;
+                                        background-size: 24px 24px;
+                                    }
+
+                                    &:empty{
+                                        display: none;
                                     }
                                 }
                             }
@@ -7051,55 +7076,12 @@ section.langame_software_wrapper {
                                 .add_photo_wrapper {
                                     display: flex;
                                     flex-direction: row;
-                                    justify-content: flex-end;
+                                    justify-content: space-between;
                                     align-items: center;
-                                    flex-wrap: wrap;
-                                    padding: 32px 0;
 
                                     .add_photo_title {
-                                        font-style: normal;
-                                        font-weight: 500;
                                         font-size: 18px;
-                                        line-height: 1;
-                                        color: #000000;
-                                        margin-right: 15px;
-                                    }
-
-                                    .add_photo_list {
-                                        display: grid;
-                                        grid-template-columns: repeat(6, 46px);
-                                        grid-template-rows: repeat(2, 46px);
-                                        grid-gap: 8px;
-                                        margin-right: 0;
-                                        margin-bottom: 16px;
-
-                                        .add_photo_item {
-                                            width: 46px;
-                                            height: 46px;
-                                            background: #d3d3d3;
-                                            border-radius: 14px;
-                                            display: flex;
-                                            flex-direction: row;
-                                            align-items: center;
-                                            justify-content: center;
-                                            font-style: normal;
-                                            font-weight: 500;
-                                            font-size: 18px;
-                                            line-height: 1;
-                                            color: #ffffff;
-
-
-                                            &:first-child {
-                                                grid-column: 1/3;
-                                                grid-row: 1/3;
-                                                width: 100px;
-                                                height: 100px;
-                                                background-image: url("../img/fill-white.svg");
-                                                background-repeat: no-repeat;
-                                                background-position: center;
-                                                background-size: 46px 46px;
-                                            }
-                                        }
+                                        margin-right: 10px;
                                     }
 
                                     .add_photo {
@@ -7160,6 +7142,24 @@ section.langame_software_wrapper {
                                                     background-image: url("../img/fill-white.svg");
                                                 }
                                             }
+                                        }
+                                    }
+                                }
+
+                                .add_photo_list {
+                                    grid-template-columns: repeat(2, 1fr);
+                                    grid-gap: 8px;
+                                    margin-bottom: 46px;
+
+                                    .add_photo_item {
+                                        width: 100%;
+                                        height: 128px;
+
+                                        &:first-child {
+                                            grid-column: 1/3;
+                                            grid-row: 1/3;
+                                            width: 100%;
+                                            height: 256px;
                                         }
                                     }
                                 }
@@ -7258,18 +7258,6 @@ section.langame_software_wrapper {
                                                 top: 22px;
                                             }
                                         }
-                                    }
-                                }
-
-                                .add_photo_wrapper {
-                                    justify-content: center;
-
-                                    .add_photo_title {
-                                        margin-bottom: 16px;
-                                    }
-
-                                    .add_photo_list {
-                                        grid-gap: 7px;
                                     }
                                 }
                             }
